# jtc-tuner-gui

./: .gitignore  CMakeLists.txt  README.md  jtcTunerGui.pro  jtcparameters.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  resources.qrc
latex/: description.tex
